--- a/view/homeView.mustache
+++ b/view/homeView.mustache
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animalia -- Home</title>
 </head>
 <body>
-    
+    <p>ototot<p/>
+      <p>ototot<p/>
+        <p>ototot<p/>
 </body>
 </html>
 
