todo SOLUCIONADOgit add .git add .git add .

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -6,11 +6,5 @@
     <title>Animalia -- Home</title>
 </head>
 <body>
-    <p>ototot<p/>
-      <p>ototot<p/>
-        <p>ototot<p/>
 
-<script src=""></script>
-</body>
-</html>
-
+<header>header</header>
