--- a/view/header.mustache
+++ b/view/header.mustache
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animalia -- Home</title>
+    <link rel="stylesheet" type="text/css" href="../public/styles.css">
 </head>
 <body>
 
-<header>header</header>
+<header class="header">
+    <img src="../public/hornero.svg" class="logo" width="145px">
+    <h1>Animalia</h1>
+    <img src="../public/user.svg" class="account">
+</header>
