--- a/view/header.mustache
+++ b/view/header.mustache
@@ -7,9 +7,12 @@
     <link rel="stylesheet" type="text/css" href="../public/styles.css">
 </head>
 <body>
-
+<div></div>
 <header class="header">
+<div class="flex">
     <img src="../public/hornero.svg" class="logo" width="145px">
     <h1>Animalia</h1>
     <img src="../public/user.svg" class="account">
+</div>
+    
 </header>
