--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -8,6 +8,21 @@
 <body>
     <p>Bienvenido al juego!!!!!!!!!!</p>
 
+    <div class="formulario">
+        <form method="post">
+            <input type="text" placeholder="Nombre completo">
+            <input type="date">
+            <select>
+                <option>Masculino</option>  
+                <option>Femenino</option> 
+                <option>Prefiero no decirlo</option> 
+            </select>
+            <input type="text" placeholder="Pais">
+            <input type="text" placeholder="Ciudad">
+            <input type="submit" value="Registrarse">
+        </form>
+    </div>
+
 </body>
 </html>
 
