cambios en estilos

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animalia -- Home</title>
     <link rel="stylesheet" type="text/css" href="../public/styles.css">
+    <link rel="icon" href="../public/hornero.svg" type="image/x-icon">
 </head>
 <body>
 <div></div>
