--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../public/styles.css">
 </head>
 <body>
-    <p>Bienvenido al juego!!!!!!!!!!</p>
+    <p class="centrado">Bienvenido al juego!!!!!!!!!!</p>
 
     <div class="formulario">
         <form method="post">
@@ -24,6 +24,6 @@
         </form>
     </div>
 
-</body>
-</html>
+
+
 
