--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,8 @@ body{
     font-family: 'Roboto', sans-serif;
     font-family: 'Roboto Condensed', sans-serif;
     font-family: 'Roboto Mono', monospace;
+    height: 100%;
+    background-color: #F9F5E3;
 }
 
 .header{
@@ -43,6 +45,7 @@ body{
     position: relative;
     top:50px;
     left:700px;
+    border-radius: 10px;
 }
 
 .input{
@@ -64,6 +67,7 @@ select{
     width: 70%;
     margin: auto 40px;
     border: none;
+    border-radius: 10px;
 }
 
 .boton:hover{
@@ -71,3 +75,17 @@ select{
     color: #342d2d;
 }
 
+.centrado{
+    text-align: center;
+}
+
+footer{
+    margin-top: 90px;
+    position: relative;
+    bottom: 0px;
+    background-color: #444;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    font-weight: lighter;
+}
