Puliendo el form

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -11,9 +11,10 @@
 <div></div>
 <header class="header">
 <div class="flex">
-    <img src="../public/hornero.svg" class="logo" width="145px">
+    <a href="#"><img src="../public/hornero.svg" class="logo"></a>
     <h1>Animalia</h1>
-    <img src="../public/user.svg" class="account">
+    <a href="#"><img src="../public/user.svg" class="account"></a>
+    
 </div>
     
 </header>
