--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -1,25 +1,23 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animalia -- Home</title>
-    <link rel="stylesheet" type="text/css" href="../public/styles.css">
-</head>
-<body>
+
     <p class="centrado">Bienvenido al juego!!!!!!!!!!</p>
 
     <div class="formulario">
-        <form method="post">
+        <form method="post" action="index.php">
             <input type="text" placeholder="Nombre completo" class="input" autofocus required>
             <input type="date" class="input" required>
             <select>
+                <option disabled selected>Seleccionar sexo</option> 
                 <option>Masculino</option>  
                 <option>Femenino</option> 
                 <option>Prefiero no decirlo</option> 
             </select>
             <input type="text" placeholder="Pais" class="input" required>
+            
             <input type="text" placeholder="Ciudad" class="input" required>
+            <input type="text" placeholder="Nombre de usuario" class="input" required>
+            <input type="password" placeholder="Contraseña" class="input" required>
+            <input type="password" placeholder="Repita la contraseña" class="input" required>
+            <input type="file" placeholder="Foto de perfil" class="input">
             <input type="submit" value="Registrarse" class="boton">
         </form>
     </div>
