--- a/view/header.mustache
+++ b/view/header.mustache
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animalia -- Home</title>
-    <link rel="stylesheet" type="text/css" href="../public/styles.css">
-    <link rel="icon" href="../public/hornero.svg" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="public/styles.css">
+    <link rel="icon" href="public/hornero.svg" type="image/x-icon">
 </head>
 <body>
 <div></div>
 <header class="header">
 <div class="flex">
-    <a href="#"><img src="../public/hornero.svg" class="logo"></a>
+    <a href="#"><img src="public/hornero.svg" class="logo"></a>
     <h1>Animalia</h1>
-    <a href="#"><img src="../public/user.svg" class="account"></a>
+    <a href="#"><img src="public/user.svg" class="account"></a>
     
 </div>
     
