--- a/view/header.mustache
+++ b/view/header.mustache
@@ -8,13 +8,13 @@
     <link rel="icon" href="public/hornero.svg" type="image/x-icon">
 </head>
 <body>
-<div></div>
+
 <header class="header">
-<div class="flex">
+
     <a href="#"><img src="public/hornero.svg" class="logo"></a>
-    <h1>Animalia</h1>
+    <h1 class="nombre">Animalia</h1>
     <a href="#"><img src="public/user.svg" class="account"></a>
     
-</div>
+
     
 </header>
