--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -1,6 +1,19 @@
-
-
-    <footer> Celena Moscovich - Axel Leguero - Micaela Zara - Ludmila Pereyra</footer>
+<footer>
+    <div>
+        <p >Animalia</p>
+        <img src="public/hornero.svg" alt="hornero">
+        <p>Programacion Web II</p>
+    </div>
+    <div>
+        <ul class="integrantes">
+            <li>Celena Moscovich</li>
+            <li>Axel Leguero </li>
+            <li>Micaela Zara</li>
+            <li>Ludmila Pereyra</li>
+        </ul>
+    </div>
+</footer>
 
 </body>
+
 </html>
