--- a/view/header.mustache
+++ b/view/header.mustache
@@ -13,6 +13,7 @@
 
     <a href="#"><img src="public/hornero.svg" class="logo"></a>
     <h1 class="nombre">Animalia</h1>
+    <!-- ♠<svg></svg> -->
     <a href="#"><img src="public/user.svg" class="account"></a>
     
 
