--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -14,9 +14,9 @@
             </select>
         <!-- PA MÁS ADELANTE--MAPA -->
            <!-- <input type="hidden"> -->
-            <input type="text" placeholder="Pais" class="input" required>
+            <input type="text" placeholder="Pais" class="input" required name="pais">
           <!-- <input type="hidden"> -->
-            <input type="text" placeholder="Ciudad" class="input" required>
+            <input type="text" placeholder="Ciudad" class="input" required name="ciudad">
             <input type="text" placeholder="Nombre de usuario" class="input" required name="user">
             <input type="password" placeholder="Contraseña" class="input" required name="pass">
             <input type="password" placeholder="Repita la contraseña" class="input" required name="pass2">
