Clase Correo creada

--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -16,7 +16,7 @@
             <input type="text" placeholder="Pais" class="input" required>
             <!-- <input type="hidden"> -->
             <input type="text" placeholder="Ciudad" class="input" required>
-            <input type="text" placeholder="Nombre de usuario" class="input" required name="user">
+            <input type="text" placeholder="Correo electrónico" class="input" required name="user">
             <input type="password" placeholder="Contraseña" class="input" required name="pass">
 
             <div class="mt centrado">
