re-maquetado lobby

--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -1,7 +1,6 @@
 <div class="caja">
-    <h3>WELCOME</h3>
+   <h1 >ANIMALIA</h1>
     <button>Iniciar Partida</button>
-    <p>Tu registro fue exitoso</p>
-    <img src="public/hornero.svg" alt="hornero" width:100px>
+    
     
 </div>
