--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,6 +1,15 @@
 <div class="caja">
-    <h3>WELCOME</h3>
-    <p>Tu registro fue exitoso</p>
-    <img src="public/hornero.svg" alt="hornero" width:100px>
-    
+
+    <div class="caja-uno centrado mt ">
+        <h3>WELCOME</h3>
+        <!-- NOMBRE DEL USUARIO DESDE EL FORM -->
+        <p>Monstro</p>
+        <!--ADENTRO DEL SPAN UNA CLASE ,ID ,ALGO PARA PODER RELLENAR CON EL PUNTAJE,INICIALMENTE ES ------------- -->
+        <p>PUNTAJE ALCANZADO : <span>0.0</span> </p>
+    </div>
+
+    <div class="caja-dos">
+ <input type="button" value="nueva partida" class="boton">
+ <input type="button" value="ver ranking" class="boton">
+    </div>
 </div>
