comienzo del ranking

--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -26,14 +26,13 @@
                 </label>
             </div>
 
-
             <input type="submit" value="Registrarse" class="boton" name="enviar">
         </form>
     </div>
 
 
     <div class="formulario">
-        <h3>Vos ya formas parte capo,adelante,tira tu data </h3>
+        <h3>¡Vos ya formas parte, adelante! Tira tu data </h3>
         <form method="post" action="./index.php?controller=Animalia&method=procesarFormulario">
             <input type="text" placeholder="Correo Electrónico" class="input" autofocus required name="correo">
             <input type="password" placeholder="Contraseña" class="input" required name="pass">
