--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -2,5 +2,7 @@
     <h3>WELCOME</h3>
     <p>Tu registro fue exitoso</p>
     <img src="public/hornero.svg" alt="hornero" width:100px>
-    
+
+    <a href="">Ver ranking</a>
+
 </div>
