comienzo de la partida, insercion de datos a la bd

--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -1,12 +1,6 @@
-<div class="caja">
-   <h1 >ANIMALIA</h1>
-    <button>Iniciar Partida</button>
-<<<<<<< HEAD
-    <p>Tu registro fue exitoso</p>
-    <img src="public/hornero.svg" alt="hornero" width:100px>
+<div class="caja_pregunta">
+</div>
 
-=======
->>>>>>> 15bf1e5105978d1ed6c8dd96aa0281086b5a22af
-    
+<div class="caja_opciones">
     
 </div>
