--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -1,6 +1,27 @@
+{{#respuesta}}
+<tr>
+    <td>{{id}}</td>
+</tr>
+<tr>
+    <td>{{descripcion}}</td>
+</tr>
+<tr>
+    <td>{{id}}</td>
+</tr>
+<tr>
+    <td>{{descripcion}}</td>
+</tr>
+<tr>
+    <td>{{es_correcta}}</td>
+</tr>
+<tr>
+    <td>{{pregunta}}</td>
+</tr>
+{{/respuesta}}
+
 <div class="caja_pregunta">
 </div>
 
 <div class="caja_opciones">
-    
+
 </div>
