--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -9,7 +9,7 @@
     </div>
 
     <div class="caja-dos">
-        <input type="button" value="nueva partida" class="boton">
+        <a href="./index.php?controller=Partida&method=mostrarPantallaPartida">Nueva partida</a>
         <input type="button" value="ver ranking" class="boton">
     </div>
 </div>
