--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -1,27 +1,13 @@
-{{#respuesta}}
-<tr>
-    <td>{{id}}</td>
-</tr>
-<tr>
-    <td>{{descripcion}}</td>
-</tr>
-<tr>
-    <td>{{id}}</td>
-</tr>
-<tr>
-    <td>{{descripcion}}</td>
-</tr>
-<tr>
-    <td>{{es_correcta}}</td>
-</tr>
-<tr>
-    <td>{{pregunta}}</td>
-</tr>
-{{/respuesta}}
+
 
 <div class="caja_pregunta">
 </div>
 
 <div class="caja_opciones">
-
+{{#respuesta}}
+<a href="">{{descripcion}}</a>
+<a href="">{{descripcion}}</a>
+<a href="">{{descripcion}}</a>
+<a href="">{{descripcion}}</a>
+{{/respuesta}}
 </div>
