log pantalla loser puntaje

--- a/view/pantallaPerdedorView.mustache
+++ b/view/pantallaPerdedorView.mustache
@@ -1,4 +1,5 @@
-<div>
-    <p>LOOOSEERRRR</p>
-    <button><a href="./index.php?controller=Lobby&method=mostrarPantallaLobby">VOLVER AL LOBBBY</a></button>
+<div class="centrado mt">
+    <p class="mt">LOOOSEERRRR</p>
+    <p class="mt">PUNTAJE ALCANZADO ={{puntaje}}</p>
+    <button class="mt boton"><a href="./index.php?controller=Lobby&method=mostrarPantallaLobby">VOLVER AL LOBBBY</a></button>
 </div>
