--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -1,6 +1,6 @@
 <div class="contenedorPapa">
     <div class="formulario">
-        <h3>¿Todavía no te sumaste? Empeza a jugar</h3>
+        <h3>¿Todavía out? Empeza a jugar</h3>
         <form method="post" action="./index.php?controller=Animalia&method=procesarFormulario">
 
             <input type="text" placeholder="Nombre completo" class="input" autofocus required name="nombre">
@@ -32,7 +32,7 @@
 
 
     <div class="formulario">
-        <h3>¡Vos ya formas parte, adelante! Tira tu data </h3>
+        <h3>¡A vos te conozco! Tira tu data </h3>
         <form method="post" action="./index.php?controller=Animalia&method=procesarFormulario">
             <input type="text" placeholder="Correo Electrónico" class="input" autofocus required name="correo">
             <input type="password" placeholder="Contraseña" class="input" required name="pass">
