--- a/view/pantallaPerdedorView.mustache
+++ b/view/pantallaPerdedorView.mustache
@@ -1,5 +1,7 @@
 <div class="centrado mt">
     <p class="mt">LOOOSEERRRR</p>
-    <p class="mt">PUNTAJE ALCANZADO ={{puntaje}}</p>
-    <button class="mt boton"><a href="./index.php?controller=Lobby&method=mostrarPantallaLobby">VOLVER AL LOBBBY</a></button>
+
+    <p class="mt">PUNTAJE ALCANZADO = <span>{{puntaje}}</span></p>
+    <button class="mt boton"><a href="./index.php?controller=Lobby&method=mostrarPantallaLobby">VOLVER AL
+            LOBBBY</a></button>
 </div>
