--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -10,6 +10,6 @@
 
     <div class="caja-dos">
         <a href="./index.php?controller=Partida&method=mostrarPantallaPartida">Nueva partida</a>
-        <input type="button" value="ver ranking" class="boton">
+        <button class="mt boton"><a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">Ver Ranking</a></button>
     </div>
 </div>
