--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -1,9 +1,10 @@
 <div class="caja_pregunta">
     <h1>Ranking</h1>
-    {{#Partida}}
-        <h1>{{user_name}}</h1>
-        <h1>{{puntaje}}</h1>
-    {{/Partida}}
+    {{#partida}}
+    <span>{{user_name}} </span><span> {{puntaje}}</span><br>
+        <h1></h1>
+        <h1></h1>
+    {{/partida}}
 </div>
 
 <div class="caja_pregunta">
