--- a/public/styles.css
+++ b/public/styles.css
@@ -66,7 +66,9 @@ body {
     box-sizing: border-box;
     margin: 2%;
 }
-
+.inline{
+    display: inline;
+}
 .formulario {
     display: flex;
     text-align: center;
@@ -205,4 +207,9 @@ footer img {
 
 .integrantes {
     list-style-type: none;
+}
+.caja_ranking{
+    margin: 20px 20px;
+    background-color: #F9F5E3;
+    padding: 50px;
 }
