--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -3,6 +3,7 @@
     <div class="caja_ranking">
         <h1>Ranking</h1>
         {{#partida}}
+        <a href="./index.php?controller=Perfil&method=mostrarPantallaPerfil"> 👑 {{user_name}}</a><span> {{puntaje}}</span><br>
         <span><h3 class="inline">👑 {{user_name}}</h3>  </span><span> {{puntaje}}</span><br>
             <h1></h1>
             <h1></h1>
