--- a/view/pantallaPerdedorView.mustache
+++ b/view/pantallaPerdedorView.mustache
@@ -1,4 +1,7 @@
 <div class="centrado mt">
+    <h1 class="arcade">
+        Game Over
+    </h1>
     <p class="mt">LOOOSEERRRR</p>
 
     <p class="mt">PUNTAJE ALCANZADO = <span>{{puntaje}}</span></p>
