--- a/view/perfilView.mustache
+++ b/view/perfilView.mustache
@@ -1,5 +1,12 @@
 <div class="contenedorPapa">
+    <div class="botonera">
+        <button class="boton-sec"><a href="./index.php?controller=Partida&method=mostrarPantallaPartida">Jugar otra vez</a></button>
+        <button class="boton-sec"><a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">Ranking</a></button>
+        <button class="boton-sec"><a href="./index.php?controller=Animalia&method=mostrarPantallaInicial">Cerrar Sesión</a></button>
+    </div>
+    
     <h1>Perfil</h1>
+    
     {{#usuario}}
     <h1>Usuario: {{user_name}}</h1>
     <h2>Nombre: {{nombre_completo}}</h2>
