--- a/view/pantallaPerdedorView.mustache
+++ b/view/pantallaPerdedorView.mustache
@@ -1,6 +1,6 @@
 <div class="centrado mt">
     <h1 class="arcade">
-        Game Over
+        🤡  Game Over  🤡
     </h1>
     <p class="mt">LOOOSEERRRR</p>
 
