--- a/view/perfilView.mustache
+++ b/view/perfilView.mustache
@@ -1,17 +1,19 @@
-<div class="contenedorPapa">
+<div class="contenedorPadre">
     <div class="botonera">
         <button class="boton-sec"><a href="./index.php?controller=Partida&method=mostrarPantallaPartida">Jugar otra vez</a></button>
         <button class="boton-sec"><a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">Ranking</a></button>
         <button class="boton-sec"><a href="./index.php?controller=Animalia&method=mostrarPantallaInicial">Cerrar Sesión</a></button>
     </div>
+    <div class="perfil">
+        <h1>Perfil</h1>
     
-    <h1>Perfil</h1>
-    
-    {{#usuario}}
-    <h1>Usuario: {{user_name}}</h1>
-    <h2>Nombre: {{nombre_completo}}</h2>
-    <h3>Fecha de nacimiento: {{anio_de_nacimiento}}</h3>
-    <p>Mail: {{mail}}</p>
-    <img src="#" alt="">
-    {{/usuario}}
+        {{#usuario}}
+        <h1>Usuario: {{user_name}}</h1>
+        <h2>Nombre: {{nombre_completo}}</h2>
+        <h3>Fecha de nacimiento: {{anio_de_nacimiento}}</h3>
+        <p>Mail: {{mail}}</p>
+        <img src="#" alt="">
+        {{/usuario}}
+    </div>
+   
 </div>
